day-14-kyverno/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    resources: 
      limits:
        cpu: "1"
        memory: 128Mi
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
